static/style/nav.css
@keyframes slideDown {
	from {
		margin-top: 0;
	}

	to {
		margin-top: 2em;
	}
}

@keyframes slideUp {
	from {
		margin-top: 0;
	}

	to {
		margin-top: 2em;
	}
}

.nav-list {
	display: flex;
	flex-direction: column;

	gap: 8px;
}

.nav-holder {
	display: flex;

	flex-direction: row;
	align-items: center;
	justify-content: left;
	gap: 10px;

	width: 13em;
}

.nav-button {
	display: block;
	position: absolute;

	opacity: 0;

	width: 13em;
	height: 3em;

	overflow: hidden;
	white-space: nowrap;
}

.nav-icon {
	height: 3em;
	width: 3em;
	object-fit: contain;
}

.nav-text {
	height: 2em;
	width: auto;

	object-fit: contain;
	object-position: left;
}

@media screen and (max-width: 1200px) {
	.nav-list {
		display: flex;
		flex-direction: row;
		
		margin-left: 0;

		gap: 1em;
	}

	.nav-text {
		display: none;
	}

	.nav-icon,
	.nav-holder,
	.nav-button {
		height: 3em;
		width: 3em;
	}

	.active>.nav-icon {
		animation: slideDown 0.5s ease forwards;
	}
}

